syntax = "proto3";
package pack;

import "transaction.proto";

option go_package = "/proto";
option java_package = "com.meta_node.protos.compiled.pack";


message Pack {
    repeated transaction.Transaction Transactions = 1;
    bytes AggregateSign = 2;
    uint64 TimeStamp = 3;
    string Id = 4;
}

message Packs {
    repeated Pack Packs = 1;
}

message PacksFromLeader {
    repeated Pack Packs = 1;
    uint64 BlockNumber = 2;
    uint64 TimeStamp = 3;
}

message VerifyPackSignRequest {
    string PackId = 1;
    repeated bytes PublicKeys = 2;
    repeated bytes Hashes = 3;
    bytes Sign = 4;
}

message VerifyPackSignResult{
    string PackId = 1;
    bool Valid = 2;
}
